project/application/static/css/site.css
body {
    width: 100%;
    margin: 0;
    background-color: #fafafa;
}
article {
    font-variant-numeric: oldstyle-nums;
}

#rh-subnav {
    display: none;
}

article div {
    text-align: center;
}

article h1, article h2, article h3, article h4 {
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: bold;
}

article h1 {
    margin-top: 30px;
    font-size: 50px;
    text-transform: uppercase;
    color: #333;
    text-align: center;
}

h2#timer-text, h2#yes-no {
    font-size: 250px;
    letter-spacing: -15px;
    color: #C70039;
    margin: -50px auto;
    text-align: center;
}

h2#timer-text + p, h2#yes-no + p, article h2, article h3 {
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: bold;
    font-size: 34px;
    color: #333;
    margin: auto;
    max-width: 800px;
    text-transform: uppercase;
    text-align: center;
}

section.chart h2, section.recent h2, section.recent h3 {
	margin-top: 25px;
}

article h3 {
    font-size: 28px;
}

article p, article figcaption {
    text-align: center;
    max-width: 800px;
    margin: auto;
    font-family: 'PT Serif', serif;
    font-size: 24px;
    line-height: 30px;
}

.textleft {
    text-align: left;
}
.textleft-except-handheld {
    text-align: left;
}
.textright {
    text-align: right;
}

article li {
    font-size: 18px;
    line-height: 22px;
    margin-bottom: 10px;
    font-family: "PT Serif", serif;
}

.circle-yellow {
    width: 36px;
    height: 36px;
    background: #fccc0a;
    -moz-border-radius: 18px;
    -webkit-border-radius: 18px;
    border-radius: 18px;
    font: bold 25px 'Open Sans Condensed', sans-serif;
}

hr {
    height: 12px;
    margin: 20px 70px;
    border: 0;
    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
}

.recent {
    width: 350px;
    margin: auto;
}
.recent dl {
    width: 300px;
    margin: 10px auto;
}
#news {
    width: 600px;
    max-width: 600px;
}

article dl {
    width: 100%;
    overflow: hidden;
    padding: 0;
    margin: 0;
}

article dt {
    clear: both;
    float: left;
    height: 50px;
}
article dt img {
    padding: 5px;
    width: 40px;
    height: 40px;
}

article dd {
    font: normal 20px 'PT Serif', serif;
    padding: 5px;
    height: auto;
    text-align: left;
    line-height: 22px;
}

#lead {
    margin-bottom: 10px;
}

#lead dl {
    margin: auto;
    max-width: 800px;
    overflow: visible;
}
article dl dd {
    float: none;
}

#recent dl dd {
    height: 50px;
}

.ad {
    margin-bottom: 5px;
}
.center {
    margin: auto;
    text-align: center;
}
.hide, .cutoff {
    display: none;
}
.unhide {
    display: block;
}
div.center > span {
    font-size:10px;
    color:#999;
    font-family:sans-serif;
}

/* HANDHELD-SPECIFIC */
@media only screen and ( min-width: 220px ) and ( max-width:727px ) {
    article {
        margin: auto;
    }
    #news {
        max-width: 100%;
        width: 100%;
        margin: 0 30px;
    }
    .textleft-except-handheld {
        text-align: right;
    }
    #tooltip h3 mark {
        content: "-";
    }
}
/* HANDHELD & TABLET */
@media only screen and ( min-width: 220px ) and (max-width:1023px) {
    article h1 {
        font-size: 30px;
        line-height: 25px;
    }
    h2#timer-text, h2#yes-no {
        margin: -60px auto 0 auto;
        line-height: 300px;
    }
    article h2 {
        line-height: 30px;
    }
    #lead p {
        margin: auto 10px;
    }
    article p, article figcaption, article dl {
        margin-left: 10px;
        margin-right: 10px;
    }
    .overflower {
        width: 100vw;
        overflow-x: scroll;
    }
    .overflower figcaption {
    }
}

/* TABLET-SPECIFIC */
@media only screen and ( min-width: 728px ) and (max-width:1023px) {
    article p, article figcaption, article dl {
        margin-left: 30px;
        margin-right: 30px;
    }
}

/* CHART STYLES */
#chart-wrapper {}
#chart-wrapper figure {
}

.enter {
  fill: green;
}

.update {}

.exit {
  fill: brown;
}

.green:hover, .subway4:hover, .subway5:hover, .subway6:hover,
.green, .subway4, .subway5, .subway6 {
    fill: #00933c;
    stroke: #00933c;
}
.light-green:hover, .subwayG:hover,
.light-green, .subwayG {
    fill: #6cbe45;
    stroke: #6cbe45;
}
.red:hover, .subway2:hover, .subway3:hover, .subway1:hover,
.red, .subway2, .subway3, .subway1 {
    fill: #ee352e;
    stroke: #ee352e;
}
.purple:hover, .subway7:hover,
.purple, .subway7 {
    fill: #b933ad;
    stroke: #b933ad;
}
.blue:hover, .subwayA:hover, .subwayC:hover, .subwayE:hover,
.blue, .subwayA, .subwayC, .subwayE {
    fill: #2850ad;
    stroke: #2850ad;
}
.orange:hover, .subwayB:hover, .subwayM:hover, .subwayD:hover, .subwayF:hover,
.orange, .subwayB, .subwayM, .subwayD, .subwayF {
    fill: #ff6319;
    stroke: #ff6319;
}
.yellow:hover, .subwayN:hover, .subwayQ:hover, .subwayW:hover, .subwayR:hover,
.yellow, .subwayN, .subwayQ, .subwayW, .subwayR {
    fill: #fccc0a;
    stroke: #fccc0a;
}
.brown:hover, .subwayJ:hover, .subwayZ:hover,
.brown, .subwayJ, .subwayZ {
    fill: #996633;
    stroke: #996633;
}
.dark-grey:hover, 
.dark-grey {
    fill: #808183;
    stroke: #808183;
}
.grey:hover, .subwayL:hover,
.grey, .subwayL {
    fill: #a7a9ac;
    stroke: #a7a9ac;
}
circle {
    -webkit-transition: all 250ms ease-out;
    transition: all 250ms ease-out;
}
circle:hover, .circle_hover {
    fill: white!important;
    stroke-width: 15;
}

p.byline { font-size: 100%; }

/* IE10+ CSS styles go here */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
}

.cuomo {
	width: 30px;
	height: 30px;
	display: inline-block;
	position: relative;
	top: 7px;
	margin-top: -10px;
}
#another-chart p {
	text-align: left;
	margin-bottom: 8px;
}
div#tooltip {
    max-width: 600px;
    min-height: 148px;
    height: 200px;
    margin: auto;
    text-align: left;
    padding: 10px 10px 10px 80px;
    background-color: #DDD;
    border: 0px;
    border-radius: 0 12px 12px 0;
    pointer-events: none;
    background-position-x: -40px;
}
div#tooltip > h3 {
    line-height: 24px;
}
div#tooltip > h3, div#tooltip > p {
    text-align: left;
    position: relative;
    top: -140px;
}
#tooltip-bg {
    position: relative;
    left: -120px;
    top: -10px;
    min-height:140px;
    max-height: 200px;
    width: 200px;
}
.bg-line-a {
    background: url('../svg/a.svg') no-repeat;
}
.bg-line-b {
    background: url('../svg/b.svg') no-repeat;
}
.bg-line-c {
    background: url('../svg/c.svg') no-repeat;
}
.bg-line-d {
    background: url('../svg/d.svg') no-repeat;
}
.bg-line-e {
    background: url('../svg/e.svg') no-repeat;
}
.bg-line-f {
    background: url('../svg/f.svg') no-repeat;
}
.bg-line-g {
    background: url('../svg/g.svg') no-repeat;
}
.bg-line-j {
    background: url('../svg/j.svg') no-repeat;
}
.bg-line-l {
    background: url('../svg/l.svg') no-repeat;
}
.bg-line-m {
    background: url('../svg/m.svg') no-repeat;
}
.bg-line-n {
    background: url('../svg/n.svg') no-repeat;
}
.bg-line-q {
    background: url('../svg/q.svg') no-repeat;
}
.bg-line-r {
    background: url('../svg/r.svg') no-repeat;
}
.bg-line-w {
    background: url('../svg/w.svg') no-repeat;
}
.bg-line-z {
    background: url('../svg/z.svg') no-repeat;
}
.bg-line-1 {
    background: url('../svg/1.svg') no-repeat;
}
.bg-line-2 {
    background: url('../svg/2.svg') no-repeat;
}
.bg-line-3 {
    background: url('../svg/3.svg') no-repeat;
}
.bg-line-4 {
    background: url('../svg/4.svg') no-repeat;
}
.bg-line-5 {
    background: url('../svg/5.svg') no-repeat;
}
.bg-line-6 {
    background: url('../svg/6.svg') no-repeat;
}
.bg-line-7 {
    background: url('../svg/7.svg') no-repeat;
}
.hidden-but-for-screen-readers, .hidehide, #tooltip h3 span {
    position: absolute !important;
    clip: rect(1px, 1px, 1px, 1px);
}

